--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 ###< symfony/framework-bundle ###
 
 compose.override.yaml
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
