Crude first implemenattion if R&M API, presentation

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "symfony/framework-bundle": "7.1.*",
         "symfony/http-client": "7.1.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/property-access": "7.1.*",
         "symfony/runtime": "7.1.*",
+        "symfony/serializer": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.1.*",
