--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+legacy_doc:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController
+    defaults:
+        path: /dimensions
+        permanent: false
